argocd/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: argocd-http
  namespace: argocd
  labels:
    app: argocd
  annotations:
    cert-manager.io/issuer: "letsencrypt-production"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argo.corbe.net
      secretName: argo-tls
  rules:
  - host: argo.corbe.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 80
